<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="30dp">
    <TextView
        android:id="@+id/monday"
        style="@style/MyWeekStyle"
        android:text="@string/monday"
        />
    <TextView
        android:id="@+id/tuesday"
        style="@style/MyWeekStyle"
        android:text="@string/tuesday"
        />
    <TextView
        android:id="@+id/wednesday"
        style="@style/MyWeekStyle"
        android:text="@string/wednesday"
        />
    <TextView
        android:id="@+id/thursday"
        style="@style/MyWeekStyle"
        android:text="@string/thursday"
        />
    <TextView
        android:id="@+id/friday"
        style="@style/MyWeekStyle"
        android:text="@string/friday"
        />
    <TextView
        android:id="@+id/saturday"
        style="@style/MyWeekStyle"
        android:text="@string/saturday"
        />
    <TextView
        android:id="@+id/sunday"
        style="@style/MyWeekStyle"
        android:text="@string/sunday"
        />
</LinearLayout>